--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "nodemon src/index.js"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
     "eslint": "^7.32.0 || ^8.2.0",
     "express": "^4.18.2",
     "nodemon": "^3.0.1"
