--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Bruno Lopes <eusoubruno7@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon src/index.js"
+    "start": "nodemon src/index.js",
+    "test": "jest  --setupFiles dotenv/config"
   },
   "dependencies": {
     "axios": "^1.5.1",
@@ -16,7 +17,9 @@
     "nodemon": "^3.0.1"
   },
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.25.2"
+    "eslint-plugin-import": "^2.25.2",
+    "jest": "^29.7.0"
   }
 }
