--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
   },
   "dependencies": {
     "axios": "^1.5.1",
-    "dotenv": "^16.3.1",
-    "eslint": "^7.32.0 || ^8.2.0",
-    "express": "^4.18.2",
-    "nodemon": "^3.0.1"
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
+    "dotenv": "^16.3.1",
+    "eslint": "^8.50.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.2",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.1"
   }
 }
